Colaboratory를 통해 생성됨

--- a/getting_and_knowing_occupation_Exercises.ipynb
+++ b/getting_and_knowing_occupation_Exercises.ipynb
@@ -33,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 69,
       "metadata": {
         "id": "MRqTG9FbjZ04"
       },
@@ -63,13 +63,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 70,
       "metadata": {
         "id": "m55Yef0hjZ07"
       },
       "outputs": [],
       "source": [
-        "user_id=pd.read_csv('https://raw.githubusercontent.com/justmarkham/DAT8/master/data/u.user', sep='|',index_col='user_id')\n",
+        "users=pd.read_csv('https://raw.githubusercontent.com/justmarkham/DAT8/master/data/u.user', sep='|',index_col='user_id')\n",
         "\n"
       ]
     },
@@ -84,7 +84,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 71,
       "metadata": {
         "scrolled": true,
         "id": "y33tzu2TjZ0-",
@@ -92,7 +92,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 865
         },
-        "outputId": "9235ce71-195a-4fbe-c4f5-f2e7b7e0bd7f"
+        "outputId": "14d7685d-2602-42ca-922b-98ac87b2021c"
       },
       "outputs": [
         {
@@ -129,7 +129,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9b389593-ff6f-4155-970c-0cb4970a38d4\">\n",
+              "  <div id=\"df-97d7705c-19ef-4282-95ac-517b2bc0f813\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -341,7 +341,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9b389593-ff6f-4155-970c-0cb4970a38d4')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-97d7705c-19ef-4282-95ac-517b2bc0f813')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -392,12 +392,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-9b389593-ff6f-4155-970c-0cb4970a38d4 button.colab-df-convert');\n",
+              "          document.querySelector('#df-97d7705c-19ef-4282-95ac-517b2bc0f813 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-9b389593-ff6f-4155-970c-0cb4970a38d4');\n",
+              "          const element = document.querySelector('#df-97d7705c-19ef-4282-95ac-517b2bc0f813');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -420,11 +420,11 @@
             ]
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 71
         }
       ],
       "source": [
-        "user_id.head(25)"
+        "users.head(25)"
       ]
     },
     {
@@ -438,7 +438,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 72,
       "metadata": {
         "scrolled": true,
         "id": "CH75Lsl5jZ1A",
@@ -446,7 +446,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 394
         },
-        "outputId": "02848b5e-3dd1-4a97-a11a-f80110c4da88"
+        "outputId": "23a92797-cf94-4919-f67a-66c2d3e63d9a"
       },
       "outputs": [
         {
@@ -468,7 +468,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ee6cefe2-374f-4353-bdd5-5507f3aefdf9\">\n",
+              "  <div id=\"df-dc641d11-44fc-4efa-ace3-f571b9d7edf1\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -575,7 +575,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ee6cefe2-374f-4353-bdd5-5507f3aefdf9')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dc641d11-44fc-4efa-ace3-f571b9d7edf1')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -626,12 +626,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-ee6cefe2-374f-4353-bdd5-5507f3aefdf9 button.colab-df-convert');\n",
+              "          document.querySelector('#df-dc641d11-44fc-4efa-ace3-f571b9d7edf1 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-ee6cefe2-374f-4353-bdd5-5507f3aefdf9');\n",
+              "          const element = document.querySelector('#df-dc641d11-44fc-4efa-ace3-f571b9d7edf1');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -654,11 +654,11 @@
             ]
           },
           "metadata": {},
-          "execution_count": 46
+          "execution_count": 72
         }
       ],
       "source": [
-        "user_id.tail(10)"
+        "users.tail(10)"
       ]
     },
     {
@@ -672,13 +672,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 73,
       "metadata": {
         "id": "Ja-lX206jZ1B",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5614b6e9-3d96-479b-b196-a860140114ee"
+        "outputId": "7f6465f1-109f-401b-8012-9fad8f88140e"
       },
       "outputs": [
         {
@@ -689,11 +689,11 @@
             ]
           },
           "metadata": {},
-          "execution_count": 47
+          "execution_count": 73
         }
       ],
       "source": [
-        "user_id.shape[0] #shape 0이 observation"
+        "users.shape[0] #shape 0이 observation"
       ]
     },
     {
@@ -707,13 +707,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 74,
       "metadata": {
         "id": "q0u68RzzjZ1B",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "382c9cd2-a0f9-44bd-9b16-5d460fba659e"
+        "outputId": "82bd3607-5eb8-4b93-ac16-5a5928cfada6"
       },
       "outputs": [
         {
@@ -724,11 +724,11 @@
             ]
           },
           "metadata": {},
-          "execution_count": 48
+          "execution_count": 74
         }
       ],
       "source": [
-        "user_id.shape[1] #shape 1이 column"
+        "users.shape[1] #shape 1이 column"
       ]
     },
     {
@@ -742,13 +742,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 77,
       "metadata": {
         "id": "Kif4BlWIjZ1C",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "64b1d95f-5f9c-4727-c864-7abc6e38b567"
+        "outputId": "8d22e5c8-2aad-4d61-fc3f-c49aa7f7efeb"
       },
       "outputs": [
         {
@@ -759,11 +759,11 @@
             ]
           },
           "metadata": {},
-          "execution_count": 49
+          "execution_count": 77
         }
       ],
       "source": [
-        "user_id.columns"
+        "users.columns"
       ]
     },
     {
@@ -777,13 +777,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 78,
       "metadata": {
         "id": "0lWiFBvJjZ1D",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e6afe4a1-d7e6-4986-a0bc-8570f0358441"
+        "outputId": "f89b9a75-450d-4e4f-8d07-2152b7efd3f3"
       },
       "outputs": [
         {
@@ -797,11 +797,11 @@
             ]
           },
           "metadata": {},
-          "execution_count": 50
+          "execution_count": 78
         }
       ],
       "source": [
-        "user_id.index"
+        "users.index"
       ]
     },
     {
@@ -815,13 +815,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 79,
       "metadata": {
         "id": "BaAK685MjZ1D",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1556e5fd-7303-45f6-a15e-479af3347f94"
+        "outputId": "35e107db-0ddc-420c-884d-d1f0da6ae9e3"
       },
       "outputs": [
         {
@@ -836,11 +836,11 @@
             ]
           },
           "metadata": {},
-          "execution_count": 51
+          "execution_count": 79
         }
       ],
       "source": [
-        "user_id.dtypes"
+        "users.dtypes"
       ]
     },
     {
@@ -854,13 +854,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 80,
       "metadata": {
         "id": "f3fAg8egjZ1E",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7cc06b95-c25f-4e25-da4a-b0b3914ed67f"
+        "outputId": "a66165ba-d427-4e73-ba87-44826ec0128d"
       },
       "outputs": [
         {
@@ -883,11 +883,11 @@
             ]
           },
           "metadata": {},
-          "execution_count": 52
+          "execution_count": 80
         }
       ],
       "source": [
-        "user_id['occupation']"
+        "users['occupation']"
       ]
     },
     {
@@ -922,7 +922,7 @@
         }
       ],
       "source": [
-        "user_id.value_counts(['occupation']).count()"
+        "users.value_counts(['occupation']).count()"
       ]
     },
     {
@@ -959,7 +959,7 @@
         }
       ],
       "source": [
-        "user_id.value_counts(['occupation']).head(1)"
+        "users.value_counts(['occupation']).head(1)"
       ]
     },
     {
@@ -1001,7 +1001,7 @@
         }
       ],
       "source": [
-        "user_id.info()"
+        "users.info()"
       ]
     },
     {
@@ -1246,7 +1246,7 @@
         }
       ],
       "source": [
-        "user_id.describe(include='all')"
+        "users.describe(include='all')"
       ]
     },
     {
@@ -1260,13 +1260,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 91,
       "metadata": {
         "id": "qWGXH8sQjZ1G",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4aff148f-5e1f-4c9e-ba39-0000b92fa1c3"
+        "outputId": "be82dccb-b656-46b7-a87a-e50938a0281f"
       },
       "outputs": [
         {
@@ -1281,11 +1281,11 @@
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 91
         }
       ],
       "source": [
-        "user_id.occupation.describe()"
+        "users['occupation'].describe()\n"
       ]
     },
     {
@@ -1301,28 +1301,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 89,
       "metadata": {
         "id": "pPE5WTSPjZ1G",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2e3fdb3c-cb64-4fc1-92dd-34bedbe8f2af"
+        "outputId": "3cbe2ccb-42f4-438b-c8f4-ce4e937b9420"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "34.05196182396607"
+              "34"
             ]
           },
           "metadata": {},
-          "execution_count": 57
+          "execution_count": 89
         }
       ],
       "source": [
-        "user_id['age'].mean()"
+        "round(users['age'].mean())\n"
       ]
     },
     {
@@ -1336,28 +1336,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 86,
       "metadata": {
         "id": "o48jZS9CjZ1I",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "eca8642b-b709-4c64-cefd-9696194af001"
+        "outputId": "6eb48930-f17d-4c30-e9b2-42a4c83afc04"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "7"
+              "age\n",
+              "7      1\n",
+              "66     1\n",
+              "10     1\n",
+              "11     1\n",
+              "73     1\n",
+              "dtype: int64"
             ]
           },
           "metadata": {},
-          "execution_count": 58
+          "execution_count": 86
         }
       ],
       "source": [
-        "user_id['age'].min()"
+        "users.value_counts(['age']).tail()\n"
       ]
     }
   ],
